--- a/style.css
+++ b/style.css
@@ -1,5 +1,103 @@
-/*COLORS:
-Header background - #FFDBAA
-button - #805215
-Header Text - #553100
-Main background - #D4A76A*/
+/* Global Styles */
+
+body { 
+    margin: 0;
+}
+
+.center-text {
+    text-align: center;
+}
+
+/* Navbar Styles */
+
+.main-nav {
+    background-color: #FFDBAA;
+    color: #553100;
+    padding-left: 20px; 
+    font-size: 35px;
+    font-family: "Helvetica";
+    font-weight: bold;
+    height: 100px;
+    border-bottom: 1px solid black;
+}
+
+.nav-menu {
+    display: flex; 
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.nav-item {
+    margin: 20px;
+    height: 50px;
+    width: 100px;
+    background-color: #805215;
+    color: white;
+    border: none;
+    font-weight: bold;
+}
+
+.left {
+    margin-left: 20px;
+    margin-right: auto;
+}
+
+/* Main Section */
+
+.section {
+    background-color: #D4A76A;
+    margin: 0;
+    height: 400px;
+}
+
+.container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+h2 {
+    margin: 0;
+}
+
+.box {
+    flex: 1;
+    margin: 50px;
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: white;
+    font-family: "Helvetica";
+    font-weight: bold;
+    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+}
+
+.left-align {
+    text-align: left;
+}
+
+.paragraph-bottom-padding {
+    padding-bottom: 19px;
+}
+
+.button {
+    border: 1px solid black;
+    padding: 10px 90px;
+    font-weight: bold;
+    background-color: #805215;
+    color: white;
+}
+
+.big-box {
+    margin: 10px;
+    background-color: white;
+}
+
+.big-button {
+    border: 1px solid black;
+    padding: 10px 534px;
+    background-color: #805215;
+    color: white;
+    font-weight: bold;
+}
+
